# exploration-template-integration-test

./: .copier-answers.yml  .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  versions.json
.devcontainer/: Dockerfile  aai-root-ca.crt  devcontainer.json
.github/actions/install-repository/: action.yml
.github/workflows/: ci.yml  deploy-pages.yml  initial-commit.yml
data/raw/: AmesHousing.csv
docs/: index.md  reference.md  technical_details.md
issue-39-add-github-support-github-all/: 404.html  index.html
issue-39-add-github-support-github-all/reference/: index.html
issue-39-add-github-support-github-all/reports/01_exploration/: index.html
issue-39-add-github-support-github-all/reports/02_validation/: index.html
issue-39-add-github-support-github-all/reports/sub_dir/03_ml_libs/: index.html
issue-39-add-github-support-github-all/search/: search_index.json
issue-39-add-github-support-github-all/technical_details/: index.html
main/: 404.html  index.html  objects.inv
main/reference/: index.html
main/reports/01_exploration/: index.html
main/reports/02_validation/: index.html
main/reports/sub_dir/03_ml_libs/: index.html
main/search/: search_index.json
main/technical_details/: index.html
src/integration_test_instance/: constants.py
src/integration_test_instance/io/: __init__.py  schemas.py
src/integration_test_instance/reports/: 01_exploration.py  02_validation.py
src/integration_test_instance/reports/sub_dir/: 03_ml_libs.py
tests/: conftest.py  test_io.py
